--- a/index.html
+++ b/index.html
@@ -4,52 +4,41 @@
 	<title></title>
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Expires" content="0" />
+	<meta http-equiv="Expires" content="0" />	
+	<link rel="stylesheet" href="style.css">
 	<script src="bundle.js" type="text/javascript"></script>
 </head>
-
+​
 <body>
-	<div id="flex-container">
-
+	<div id="container">
+​
 	<!-- Start your code from here -->
-	<div class="box-card">
-	<div class="card">
-		<div class="image">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"  alt="big_tree">
+	<div class="main">
+		<div class="card">
+			<div class="Tree"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png" alt="" width="550" height="475" class="image1"></div>
+			<div class="content1">
+				<div class="heading"><h1>A leafy one</h1></div>
+				<div class="lower-para"><p style="font-size: 16px;"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit a quam et, sint ipsum debitis iure temporibus, perferendis possimus aspernatur hic veniam assumenda eius molestias, magni minima molestiae reiciendis incidunt.</p></div>
+				<div class="button"><a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png" target="_blank" style="text-decoration: none;color: white;"><button><b>SO LEAFY</b></button></a></div>
+			</div>
 		</div>
-		<div class="content_1">
-				<h1>A leafy One</h1>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia fuga incidunt ut excepturi ipsa temporibus eveniet!
-					 Architecto enim voluptates expedita asperiores eius,Mollitia fuga incidunt ut excepturi ipsa temporibus eveniet!
-					 Architecto enim voluptates expedita asperiores eius,</p>
-					 <button class="button button1">A leafy one</button>
+		<div class="card">
+			<div class="Tree"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png" alt=""width="530" height="400"class="image2"></div>
+			<div class="content1">
+				<div class="heading"><h1>Some pointy once</h1></div>
+				<div class="lower-para"><p style="font-size: 16px;"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit a quam et, sint ipsum debitis iure temporibus, perferendis possimus aspernatur hic veniam assumenda eius molestias, magni minima molestiae reiciendis incidunt.</p></div>
+				<div  class="button"><a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png" target="_blank" style="text-decoration: none;color: white;"><button><b>I'LL TAKE 10</b></button></a></div>
+			</div>
 		</div>
-	</div>
-	<div class="card_2">
-		<div class="image">
-			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png" 
-			 alt="big_tree">
-	</div>
-	<div class="content_1">
-			<h1>A pointy one</h1>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia fuga incidunt ut excepturi ipsa temporibus eveniet!
-				 Architecto enim voluptates expedita asperiores eius,Mollitia fuga incidunt ut excepturi ipsa temporibus eveniet!
-				 Architecto enim voluptates expedita asperiores eius,</p>
-				 <button class="button button1">I'll take 10</button>
-	</div>
-
-</div>
-</div>
-		
-
+	</div>	
 	<!-- End your code -->
-
+​
 	</div>
-
+​
 	<script type="text/javascript">
-
+​
 	</script>
-
+​
 </body>
 <script>
 /* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
